--- a/_sass/minimal-mistakes/_archive.scss
+++ b/_sass/minimal-mistakes/_archive.scss
@@ -3,8 +3,9 @@
    ========================================================================== */
 
 .archive {
-  margin-top: 1em;
+  margin-top: 3em;
   margin-bottom: 2em;
+  padding-left: 1.5em;
 
   @include breakpoint($large) {
     float: right;
