--- a/_sass/minimal-mistakes/_sidebar.scss
+++ b/_sass/minimal-mistakes/_sidebar.scss
@@ -37,6 +37,8 @@
   }
 
   @include breakpoint($x-large) {
+    padding-top: 3em;
+    padding-left: 2em;
     width: calc(#{$right-sidebar-width} - 1em);
   }
 
@@ -58,7 +60,7 @@
   li {
     font-family: $sans-serif;
     font-size: $type-size-6;
-    line-height: 1.5;
+    line-height: 1.9;
   }
 
   img {
@@ -134,7 +136,7 @@
   }
 
   img {
-    max-width: 110px;
+    max-width: 150px;
     border-radius: 50%;
 
     @include breakpoint($large) {
