--- a/_sass/minimal-mistakes/_reset.scss
+++ b/_sass/minimal-mistakes/_reset.scss
@@ -185,3 +185,9 @@ textarea {
   overflow: auto; /* remove vertical scrollbar in IE6-9*/
   vertical-align: top; /* readability and alignment cross-browser*/
 }
+
+a, a:link, a:visited, a:focus, a:hover, a:active{
+  color:black;
+  text-decoration:none;
+  cursor: pointer;
+}
