--- a/_sass/minimal-mistakes/_archive.scss
+++ b/_sass/minimal-mistakes/_archive.scss
@@ -24,6 +24,7 @@
   max-width: none;
   justify-content: space-between;
   margin: 0 0 1.2rem;
+  align-items: center;
 
   position: relative;
 
@@ -75,12 +76,13 @@
   .archive__item-title {
     margin-top: 1em;
     border-bottom: none;
+    font-size: 1em;
   }
 }
 
 .archive__item-excerpt {
   margin-top: 0;
-  font-size: 0;
+  font-size: 0.9em;
 
   & + p {
     text-indent: 0;
