스타일: 블로그 전체 스타일 1차 변경

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,7 +16,11 @@
 
   <body class="layout--{{ page.layout | default: layout.layout }}{% if page.classes or layout.classes %}{{ page.classes | default: layout.classes | join: ' ' | prepend: ' ' }}{% endif %}">
     {% include_cached skip-links.html %}
-    {% include_cached masthead.html %}
+    {% if page.layout == 'single' %}
+      {% include_cached masthead-page.html %}
+    {% else %}
+      {% include_cached masthead.html %}
+    {% endif %}
 
     <div class="initial-content">
       {{ content }}
