--- a/_includes/masthead-page.html
+++ b/_includes/masthead-page.html
@@ -1,7 +1,7 @@
 {% capture logo_path %}{{ site.logo }}{% endcapture %}
 
 <div class="masthead-page">
-  <div class="masthead__inner-wrap">
+  <div class="masthead-page__inner-wrap">
     <div class="masthead__menu">
       <nav id="site-nav" class="greedy-nav">
         {% unless logo_path == empty %}
