--- a/_sass/minimal-mistakes/_base.scss
+++ b/_sass/minimal-mistakes/_base.scss
@@ -34,12 +34,12 @@ h6 {
 
 h1 {
   margin-top: 0;
-  font-size: $h-size-1;
+  font-size: 2rem;
   font-weight: 900;
 }
 
 h2 {
-  font-size: $h-size-3;
+  font-size: $h-size-2;
   font-weight: 700;
 }
 
@@ -60,7 +60,7 @@ h5 {
 
 h6 {
   font-size: $h-size-6;
-  font-weight: 400;
+  font-weight: 600;
 }
 
 small,
@@ -116,7 +116,8 @@ blockquote {
   padding-left: 1em;
   padding-right: 1em;
   font-style: italic;
-  border-left: 0.25em solid $primary-color;
+  border-left: 0.25em solid #05c084;
+  background-color: #f9f9f9;
 
   cite {
     font-style: italic;
