--- a/_includes/comments-providers/utterances.html
+++ b/_includes/comments-providers/utterances.html
@@ -11,9 +11,9 @@
     var script = document.createElement('script');
     script.setAttribute('src', 'https://utteranc.es/client.js');
     script.setAttribute('repo', 'sjuhan123/sjuhan123.github.io');
-    script.setAttribute('issue-term', '{{ site.comments.utterances.issue_term | default: "pathname" }}');
-    {% if site.comments.utterances.label %}script.setAttribute('label', '{{ site.comments.utterances.label }}');{% endif %}
-    script.setAttribute('theme', '{{ site.comments.utterances.theme | default: "github-light" }}');
+    script.setAttribute('issue-term', 'pathname');
+    script.setAttribute('theme', 'github-light');
+    script.setAttribute('label', 'blog-comment');
     script.setAttribute('crossorigin', 'anonymous');
 
     commentContainer.appendChild(script);
