--- a/_includes/comments-providers/utterances.html
+++ b/_includes/comments-providers/utterances.html
@@ -10,7 +10,7 @@
 
     var script = document.createElement('script');
     script.setAttribute('src', 'https://utteranc.es/client.js');
-    script.setAttribute('repo', 'sjuhan123/sjuhan123.github.io/TIL/');
+    script.setAttribute('repo', 'sjuhan123/sjuhan123.github.io/TIL');
     script.setAttribute('issue-term', 'pathname');
     script.setAttribute('theme', 'github-light');
     script.setAttribute('label', 'blog-comment');
