--- a/_sass/minimal-mistakes/_base.scss
+++ b/_sass/minimal-mistakes/_base.scss
@@ -50,12 +50,12 @@ h3 {
 
 h4 {
   font-size: $h-size-4;
-  font-weight: 300;
+  font-weight: 500;
 }
 
 h5 {
   font-size: $h-size-5;
-  font-weight: 100;
+  font-weight: bold;
 }
 
 h6 {
@@ -69,7 +69,7 @@ small,
 }
 
 p {
-  margin-bottom: 1.3em;
+  margin-bottom: 0.5rem;
 }
 
 u,
