--- a/_sass/minimal-mistakes/_buttons.scss
+++ b/_sass/minimal-mistakes/_buttons.scss
@@ -8,17 +8,15 @@
 
 .btn {
   /* default */
-  display: inline-block;
-  margin-bottom: 0.25em;
-  padding: 0.5em 0;
   font-family: $sans-serif;
   font-size: 0.65em;
   font-weight: bold;
-  text-align: center;
+  text-align: left;
   text-decoration: none;
   border-width: 0;
   border-radius: $border-radius;
   cursor: pointer;
+  color: #31bf40;
 
   .icon {
     margin-right: 0.5em;
@@ -94,4 +92,13 @@
   &--small {
     font-size: $type-size-7;
   }
+}
+
+.page__taxonomy-item-category:not(.a) {
+  color: #31bf40;
+  background-color: #efefef;
+  padding: 0.4rem 0.9rem;
+  border-radius: 10px;
+  font-size: 13px;
+  font-weight: 600;
 }
