--- a/_sass/minimal-mistakes/_page.scss
+++ b/_sass/minimal-mistakes/_page.scss
@@ -89,7 +89,7 @@ body {
 }
 
 .page__title {
-  margin-top: 0;
+  margin: 2rem 0 2rem 0;
   line-height: 1;
 
   a {
@@ -129,6 +129,11 @@ body {
 			opacity: 1;
 		}
 	}
+
+  h3, h4, h5, h6 {
+    border-left: 0.15em solid #05c084;
+    padding-left: 20px;
+  }
 
   p,
   li,
@@ -319,10 +324,12 @@ body {
 
 .page__meta {
   float: right;
-  margin-top: 2em;
+  margin-top: 1em;
   color: $muted-text-color;
   font-family: $sans-serif;
   font-size: $type-size-6;
+  // flex: 0.2;
+  margin: 5px 0;
 
   p {
     margin: 0;
