기능: comment 기능 추가

--- a/_includes/comments-providers/utterances.html
+++ b/_includes/comments-providers/utterances.html
@@ -1,4 +1,4 @@
-<!-- <script>
+<script>
   'use strict';
 
   (function() {
@@ -18,4 +18,4 @@
 
     commentContainer.appendChild(script);
   })();
-</script> -->
+</script>
