스타일: 전체 스타일 3차 변경

--- a/_includes/archive-home.html
+++ b/_includes/archive-home.html
@@ -19,13 +19,13 @@
         <div class="archive__item-body">
           <h2 class="archive__item-title no_toc" itemprop="headline">
             {% if post.link %}
-            <a href="{{ post.link }}">{{ title }}</a> <a href="{{ post.url | relative_url }}" rel="permalink"><i class="fas fa-link" aria-hidden="true" title="permalink"></i><span class="sr-only">Permalink</span></a>
+            <a href="{{ post.link }}">{{ title }}</a>
             {% else %}
-            <a href="{{ post.url | relative_url }}" rel="permalink">{{ title }}</a>
+            <a href="{{ post.url | relative_url }}">{{ title }}</a>
             {% endif %}
           </h2>
-          {% if post.excerpt %}<div class="archive__item-excerpt" itemprop="description articleBody">{{ post.excerpt | markdownify | strip_html | truncate: 250}}</div>{% endif %}
-          <p href="{{ post.url | relative_url }}" class="btn {{ f.btn_class }}">Read more</p>
+          {% if post.excerpt %}<div class="archive__item-excerpt" itemprop="description articleBody">{{ post.excerpt | markdownify | strip_html | truncate: 240}}</div>{% endif %}
+          <a href="{{ post.url | relative_url }}" class="btn {{ f.btn_class }}">Read more</a> 
           <div class = "archive-home-button">
             {% if site.category_archive.type and post.categories[0] and site.tag_archive.type and post.tags[0] %}
               {%- include post__taxonomy.html -%}
