--- a/_sass/minimal-mistakes/_buttons.scss
+++ b/_sass/minimal-mistakes/_buttons.scss
@@ -17,6 +17,10 @@
   border-radius: $border-radius;
   cursor: pointer;
   color: #31bf40;
+  
+  &:hover {
+    text-decoration: underline;
+  }
 
   .icon {
     margin-right: 0.5em;
@@ -101,4 +105,8 @@
   border-radius: 10px;
   font-size: 13px;
   font-weight: 600;
+
+  &:hover {
+    background-color: #d1d1d1;
+  }
 }
