스타일: 전반적인 스타일 4차 변경
home page readmore, category 버튼 css hover 추가,
page title category 버튼 추가 및 구도 변경,
page toc backtotop 버튼 추가

--- a/_layouts/single.html
+++ b/_layouts/single.html
@@ -32,9 +32,12 @@ layout: default
           {% if page.title %}<h1 id="page-title" class="page__title p-name" itemprop="headline">
             <a href="{{ page.url | absolute_url }}" class="u-url" itemprop="url">{{ page.title | markdownify | remove: "<p>" | remove: "</p>" }}</a>
           </h1>{% endif %}
-          {% include page__meta.html %}
+        <div class="page__title-category-meta">
+          {% include page__taxonomy-category.html %}
+          {% include page__meta-page-title.html %}
+        </div>
         </header>
-      {% endunless %}
+        {% endunless %}
 
       <section class="page__content e-content" itemprop="text">
         {% if page.toc %}
@@ -42,6 +45,7 @@ layout: default
             <nav class="toc">
               <!-- <header><h4 class="nav__title"><i class="fas fa-{{ page.toc_icon | default: 'file-alt' }}"></i> {{ page.toc_label | default: site.data.ui-text[site.locale].toc_label | default: "On this page" }}</h4></header> -->
               {% include toc.html sanitize=true html=content h_min=1 h_max=6 class="toc__menu" skip_no_ids=true %}
+              <a href="#page-title" class="back-to-top-toc">{{ site.data.ui-text[site.locale].back_to_top }} ⇧</a>
             </nav>
           </aside>
         {% endif %}
@@ -49,13 +53,13 @@ layout: default
         {% if page.link %}<div><a href="{{ page.link }}" class="btn btn--primary">{{ site.data.ui-text[site.locale].ext_link_label | default: "Direct Link" }}</a></div>{% endif %}
       </section>
 
-      <footer class="page__meta">
+      <!-- <footer class="page__meta">
         {% if site.data.ui-text[site.locale].meta_label %}
           <h4 class="page__meta-title">{{ site.data.ui-text[site.locale].meta_label }}</h4>
         {% endif %}
         {% include page__taxonomy.html %}
         {% include page__date.html %}
-      </footer>
+      </footer> -->
 
       {% if page.share %}{% include social-share.html %}{% endif %}
 
