--- a/_layouts/single.html
+++ b/_layouts/single.html
@@ -45,7 +45,10 @@ layout: default
             <nav class="toc">
               <!-- <header><h4 class="nav__title"><i class="fas fa-{{ page.toc_icon | default: 'file-alt' }}"></i> {{ page.toc_label | default: site.data.ui-text[site.locale].toc_label | default: "On this page" }}</h4></header> -->
               {% include toc.html sanitize=true html=content h_min=1 h_max=6 class="toc__menu" skip_no_ids=true %}
+            <div class="toc_icon">
+              <a id="toggle-theme"></a>
               <a href="#page-title" class="back-to-top-toc">{{ site.data.ui-text[site.locale].back_to_top }} ⇧</a>
+            </div>
             </nav>
           </aside>
         {% endif %}
