--- a/_sass/minimal-mistakes/_footer.scss
+++ b/_sass/minimal-mistakes/_footer.scss
@@ -9,6 +9,7 @@
   margin-right: 0;
   width: 100%;
   margin-top: 3em;
+  text-align: center;
   color: $muted-text-color;
   -webkit-animation: $intro-transition;
   animation: $intro-transition;
