--- a/_sass/minimal-mistakes/_page.scss
+++ b/_sass/minimal-mistakes/_page.scss
@@ -69,7 +69,7 @@ body {
 
   .page__inner-wrap {
     float: left;
-    margin-top: 2.5em;
+    margin-top: 1em;
     margin-left: 0;
     margin-right: 0;
     width: 100%;
@@ -82,8 +82,11 @@ body {
       float: left;
       margin-left: 0;
       margin-right: 0;
-      width: 100%;
       clear: both;
+    }
+
+    .page__title-category-meta {
+      margin-bottom: 2rem;
     }
   }
 }
@@ -341,9 +344,10 @@ body {
 }
 
 .page__meta-title {
-  margin-bottom: 10px;
   font-size: $type-size-6;
   text-transform: uppercase;
+  float: right;
+  margin-top: 10px;
 }
 
 .page__meta-sep::before {
@@ -366,18 +370,31 @@ body {
   }
 }
 
-.page__taxonomy-item {
-  display: inline-block;
-  margin-right: 5px;
-  margin-bottom: 8px;
-  padding: 5px 10px;
-  text-decoration: none;
-  border: 1px solid mix(#000, $border-color, 25%);
-  border-radius: $border-radius;
+// .page__taxonomy-item {
+//   color: #31bf40;
+//   background-color: #efefef;
+//   padding: 0.4rem 0.9rem;
+//   border-radius: 10px;
+//   font-size: 13px;
+//   font-weight: 600;
+//   margin: 5px 0;
+
+//   &:hover {
+//     background-color: #d1d1d1;
+//   }
+// }
+
+.page__title-category:not(.a) {
+  color: #31bf40;
+  background-color: #efefef;
+  padding: 0.4rem 0.9rem;
+  border-radius: 10px;
+  font-size: 13px;
+  font-weight: 600;
+  margin: 5px 0;
 
   &:hover {
-    text-decoration: none;
-    color: $link-color-hover;
+    background-color: #d1d1d1;
   }
 }
 
@@ -447,6 +464,22 @@ body {
   text-transform: uppercase;
   text-align: right;
   text-decoration: none;
+}
+
+.back-to-top-toc:not(.a) {
+  clear: both;
+  color: $muted-text-color;
+  font-size: 0.8em;
+  text-transform: uppercase;
+  text-align: right;
+  text-decoration: none;
+}
+
+.page__inner-wrap {
+  a#toggle-theme {
+    margin-right: 0.3rem;
+    font-size: 0.7rem;
+  }
 }
 
 /*
