--- a/_sass/minimal-mistakes/_masthead.scss
+++ b/_sass/minimal-mistakes/_masthead.scss
@@ -5,8 +5,8 @@
 .masthead {
   position: relative;
   // border-bottom: 1px solid $border-color;
-  -webkit-animation: $intro-transition;
-  animation: $intro-transition;
+  // -webkit-animation: $intro-transition;
+  // animation: $intro-transition;
   -webkit-animation-delay: 0.15s;
   animation-delay: 0.15s;
   z-index: 20;
@@ -44,10 +44,10 @@
 .masthead-page {
   position: relative;
   border-bottom: 1px solid $border-color;
-  -webkit-animation: $intro-transition;
-  animation: $intro-transition;
-  -webkit-animation-delay: 0.15s;
-  animation-delay: 0.15s;
+  // -webkit-animation: $intro-transition;
+  // animation: $intro-transition;
+  // -webkit-animation-delay: 0.15s;
+  // animation-delay: 0.15s;
   z-index: 20;
 
   &__inner-wrap {
