--- a/_sass/minimal-mistakes/_page.scss
+++ b/_sass/minimal-mistakes/_page.scss
@@ -8,12 +8,12 @@
   margin-right: auto;
   padding-left: 1em;
   padding-right: 1em;
-  -webkit-animation: $intro-transition;
-  animation: $intro-transition;
+  // -webkit-animation: $intro-transition;
+  // animation: $intro-transition;
   width: 100%;
   max-width: 950px;
-  -webkit-animation-delay: 0.15s;
-  animation-delay: 0.15s;
+  // -webkit-animation-delay: 0.15s;
+  // animation-delay: 0.15s;
 
   @include breakpoint($x-large) {
     width: 100%;
@@ -27,12 +27,12 @@
   margin-right: auto;
   padding-left: 1em;
   padding-right: 1em;
-  -webkit-animation: $intro-transition;
-  animation: $intro-transition;
+  // -webkit-animation: $intro-transition;
+  // animation: $intro-transition;
   width: 100%;
   max-width: 1170px;
-  -webkit-animation-delay: 0.15s;
-  animation-delay: 0.15s;
+  // -webkit-animation-delay: 0.15s;
+  // animation-delay: 0.15s;
 
   @include breakpoint($x-large) {
     width: 100%;
@@ -122,10 +122,10 @@ body {
 			left: 0.5em;
 			opacity: 0;
 			font-size: 0.8em;
-			-webkit-transition: opacity 0.2s ease-in-out 0.1s;
-			-moz-transition: opacity 0.2s ease-in-out 0.1s;
-			-o-transition: opacity 0.2s ease-in-out 0.1s;
-			transition: opacity 0.2s ease-in-out 0.1s;
+			// -webkit-transition: opacity 0.2s ease-in-out 0.1s;
+			// -moz-transition: opacity 0.2s ease-in-out 0.1s;
+			// -o-transition: opacity 0.2s ease-in-out 0.1s;
+			// transition: opacity 0.2s ease-in-out 0.1s;
 		}
 
 		&:hover .header-link {
@@ -208,10 +208,10 @@ body {
   position: relative;
   margin-bottom: 2em;
   @include clearfix;
-  -webkit-animation: $intro-transition;
-  animation: $intro-transition;
-  -webkit-animation-delay: 0.25s;
-  animation-delay: 0.25s;
+  // -webkit-animation: $intro-transition;
+  // animation: $intro-transition;
+  // -webkit-animation-delay: 0.25s;
+  // animation-delay: 0.25s;
 
   &--overlay {
     position: relative;
@@ -221,10 +221,10 @@ body {
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
-    -webkit-animation: $intro-transition;
-    animation: $intro-transition;
-    -webkit-animation-delay: 0.25s;
-    animation-delay: 0.25s;
+    // -webkit-animation: $intro-transition;
+    // animation: $intro-transition;
+    // -webkit-animation-delay: 0.25s;
+    // animation-delay: 0.25s;
 
     a {
       color: #fff;
@@ -504,8 +504,8 @@ body {
 }
 
 .page__comments-form {
-  -webkit-transition: $global-transition;
-  transition: $global-transition;
+  // -webkit-transition: $global-transition;
+  // transition: $global-transition;
 
   &.disabled {
     input,
