--- a/_sass/minimal-mistakes/_utilities.scss
+++ b/_sass/minimal-mistakes/_utilities.scss
@@ -336,8 +336,8 @@ body:hover .visually-hidden button {
   height: $navicon-height;
   background: $primary-color;
   margin: auto;
-  -webkit-transition: 0.3s;
-  transition: 0.3s;
+  // -webkit-transition: 0.3s;
+  // transition: 0.3s;
 
   &:before,
   &:after {
@@ -347,8 +347,8 @@ body:hover .visually-hidden button {
     width: $navicon-width;
     height: $navicon-height;
     background: $primary-color;
-    -webkit-transition: 0.3s;
-    transition: 0.3s;
+    // -webkit-transition: 0.3s;
+    // transition: 0.3s;
   }
 
   &:before {
@@ -396,8 +396,8 @@ body:hover .visually-hidden button {
       height: 100%;
       opacity: 0;
       background-color: $background-color;
-      -webkit-transition: $global-transition;
-      transition: $global-transition;
+      // -webkit-transition: $global-transition;
+      // transition: $global-transition;
       pointer-events: none;
     }
   }
@@ -405,8 +405,8 @@ body:hover .visually-hidden button {
   &.close {
     &:before {
       opacity: 0.9;
-      -webkit-transition: $global-transition;
-      transition: $global-transition;
+      // -webkit-transition: $global-transition;
+      // transition: $global-transition;
       pointer-events: auto;
     }
   }
