--- a/_sass/minimal-mistakes/_page.scss
+++ b/_sass/minimal-mistakes/_page.scss
@@ -134,8 +134,8 @@ body {
 	}
 
   h3, h4, h5, h6 {
-    border-left: 0.15em solid #05c084;
-    padding-left: 20px;
+    // border-left: 0.15em solid #05c084;
+    // padding-left: 20px;
   }
 
   p,
