--- a/_includes/comments-providers/utterances.html
+++ b/_includes/comments-providers/utterances.html
@@ -10,8 +10,8 @@
 
     var script = document.createElement('script');
     script.setAttribute('src', 'https://utteranc.es/client.js');
-    script.setAttribute('repo', 'sjuhan123/sjuhan123.github.io/TIL');
-    script.setAttribute('issue-term', 'pathname');
+    script.setAttribute('repo', '{{ site.repository }}');
+    script.setAttribute('issue-term', '{{ site.comments.utterances.issue_term | default: "pathname" }}');
     script.setAttribute('theme', 'github-light');
     script.setAttribute('label', 'blog-comment');
     script.setAttribute('crossorigin', 'anonymous');
