style. a tag visited color 수정

--- a/_sass/minimal-mistakes/_page.scss
+++ b/_sass/minimal-mistakes/_page.scss
@@ -131,6 +131,10 @@ body {
 		&:hover .header-link {
 			opacity: 1;
 		}
+
+    a:visited {
+      color: $xing-color;
+    }
 	}
 
   h3, h4, h5, h6 {
@@ -641,3 +645,5 @@ body {
 .utterances {
   max-width: 100% !important;
 }
+
+
